--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
+        <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,200,600,700' rel='stylesheet' type='text/css'>
+
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body ng-app="tripler" ng-controller="MainController">
