--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>-->
 
-        <div class="app" ng-if="validated && !loading">
+        <div class="app" ng-if="!loading">
             <!--<h1 class="tripler logo">Tripler</h1>-->
             <img src="{{brand_logo}}" class="brand_logo" />
             <h1 id="setup_id">ID {{inputID}}</h1>
@@ -86,8 +86,8 @@
 
 
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
+        <script src="js/vendor/jquery-1.11.2.min.js"></script>
 
 
         <script src="js/vendor/angular.min.js"></script>
@@ -101,26 +101,31 @@
         <script src='js/vendor/lodash.min.js'></script>
         <script src='js/vendor/angular-google-maps.min.js'></script>
 
-        <script src="js/app.js"></script>
-
-
-
-
-
         <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/functions.js"></script>
+
+        <script src="js/types.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/TriplerService.js"></script>
+
+
+
+
+
+
+
 
 
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        <!--<script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        </script>-->
     </body>
 </html>
